・画像変更 ・ドロップダウンメニュー追加

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaisei+Opti&display=swap');
 
 body {
-    background-image: url("yuta801-27.jpg");
+    background-image: url("KIJ_gyoumuyougasudai_TP_V.jpg");
     background-repeat: no-repeat;
     /*background-position: center;*/
     background-size: 100% auto;
